# PixelPlayer

./: .gitignore  README.md  package-lock.json
.github/: FUNDING.yml
src/: index.html  localgames.json  main.js  player.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/assets/games/: 3-foot-ninja-ii.swf  ben-10-kraken-attack.swf  cannon-blast.swf  cheese-hunt.swf  heli-attack-2.swf  pacman.swf  penguin-push.swf  powerpuff-girls-attack-of-the-puppybots.swf  tom-and-jerry-bowling.swf
src/assets/ruffle/: core.ruffle.0eaa0b7ef2f4783b8cca.js.map  core.ruffle.5a04ecb4a7bdba7a608b.js.map  package.json  ruffle.js.map
src/css/: style.css
src/js/: gamePlayer.js  library.js  localGames.js  popups.js  timeTracker.js
src/js/popups/: about.js
