[package]
name = "pixelplayer"
version = "1.0.0"
description = "PixelPlayer is a simple desktop app for playing flash games"
authors = ["Sandun Wiratunga"]
license = ""
repository = "https://github.com/sandunwira/PixelPlayer"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
tauri-bundler = "1.4.5"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.2", features = [ "window-close", "window-minimize", "window-maximize", "window-hide", "fs-all", "window-show", "window-unminimize", "notification-all", "window-start-dragging", "window-unmaximize", "updater", "shell-open"] }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
window-shadows = "0.2.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
